--- a/Burger.html
+++ b/Burger.html
@@ -15,8 +15,8 @@
     <div class="Logo">JENITO</div>
     <nav>
       <ul>
-        <li><a href="food.html#popular">Popular Dishes</a></li>
-        <li><a href="food.html#plans">Meal Plans</a></li>
+        <li><a href="index.html#popular">Popular Dishes</a></li>
+        <li><a href="index.html#plans">Meal Plans</a></li>
         <li><a href="#">Order Now</a></li>
         <li><a href="login.html">Login</a></li>
       </ul>
@@ -147,9 +147,10 @@
       </div>
     </div>
 
-    <a class="back-link" href="food.html">⬅ Back to Home</a>
+    <a class="back-link" href="indez.html">⬅ Back to Home</a>
   </div>
 
   <script src="food.js"></script>
 </body>
+
 </html>
