--- a/Burger.html
+++ b/Burger.html
@@ -147,10 +147,11 @@
       </div>
     </div>
 
-    <a class="back-link" href="indez.html">⬅ Back to Home</a>
+    <a class="back-link" href="index.html">⬅ Back to Home</a>
   </div>
 
   <script src="food.js"></script>
 </body>
 
 </html>
+
