--- a/login.html
+++ b/login.html
@@ -3,40 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jenito - Login</title>
+  <title>Jenito - Welcome</title>
   <link rel="stylesheet" href="food.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div id="stars-canvas"></div>
+  <div class="login-box">
+    <h2>Welcome to Jenito</h2>
+    <p>Enter your name to explore our menu</p>
+    <form id="loginForm">
+      <input type="text" id="username" placeholder="Your Name" required style="width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: 1px solid #ccc;">
+      <button type="submit" id="loginBtn" style="width: 100%; padding: 10px; background: #e50914; color: white; border: none; border-radius: 5px; cursor: pointer;">Continue as Guest</button>
+    </form>
+    <p><a href="index.html" style="color: #e50914; text-decoration: none;">⬅ Back to Home</a></p>
+  </div>
 
- <div class="login-box">
-  <h2>Login to Jenito</h2>
-
-  <form onsubmit="return handleLogin()">
-    <input type="text" id="email" placeholder="Email or Username" required>
-    <input type="password" id="password" placeholder="Password" required>
-
-    <button type="submit" id="loginBtn">Login</button>
-  </form>
-
-  <p><a href="food.html">⬅ Back to Home</a></p>
-</div>
-
-<script>
-  function handleLogin() {
-    let email = document.getElementById("email").value;
-    let pass = document.getElementById("password").value;
-
-    if (email && pass) {
-      document.getElementById("loginBtn").innerText = "Order Now";
-      window.location.href = "order.html";
-    }
-    return false; // page reload stop
-  }
-</script>
+  <script>
+    document.getElementById('loginForm').onsubmit = function(e) {
+      e.preventDefault();
+      localStorage.setItem("loggedIn", "true");
+      // Agar aapke pas order.html hai toh wahan bhej dega
+      window.location.href = "index.html"; 
+    };
   </script>
-
   <script src="food.js"></script>
 </body>
 </html>
