--- a/Biryani.html
+++ b/Biryani.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Burger Varieties - Jenito</title>
+  <title>Biryani Varieties - Jenito</title>
   <link rel="stylesheet" href="food.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    /* Isse card par mouse le jane par cursor pointer (haath) ban jayega */
+    .food-card {
+      cursor: pointer;
+    }
+    .food-card a {
+      text-decoration: none;
+      color: inherit;
+      display: block;
+    }
+  </style>
 </head>
 <body>
   <div id="stars-canvas"></div>
@@ -15,9 +26,9 @@
     <div class="Logo">JENITO</div>
     <nav>
       <ul>
-        <li><a href="food.html#popular">Popular Dishes</a></li>
-        <li><a href="food.html#plans">Meal Plans</a></li>
-        <li><a href="#">Order Now</a></li>
+        <li><a href="index.html">Popular Dishes</a></li>
+        <li><a href="index.html">Meal Plans</a></li>
+        <li><a href="order.html">Order Now</a></li>
         <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
@@ -26,130 +37,161 @@
   <div class="food-container">
     <h1>🥘 Biryani Varieties</h1>
     <div class="food-grid">
+      
       <div class="food-card">
-        <img src="Kolkata.jpg" alt="Kolkata Biryani">
-        <div class="food-info">
-          <h3>Kolkata Biryani</h3>
-          <p>₹200</p>
-        </div>
+        <a href="order.html">
+          <img src="Kolkata.jpg" alt="Kolkata Biryani">
+          <div class="food-info">
+            <h3>Kolkata Biryani</h3>
+            <p>₹200</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Dindigul-biryani.webp" alt="Dindigul Biryani">
-        <div class="food-info">
-          <h3>Dindigul Biryani</h3>
-          <p>₹220</p>
-        </div>
+        <a href="order.html">
+          <img src="Dindigul-biryani.webp" alt="Dindigul Biryani">
+          <div class="food-info">
+            <h3>Dindigul Biryani</h3>
+            <p>₹220</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Sindhi.jpg" alt="Sindhi biryani">
-        <div class="food-info">
-          <h3>Sindhi biryani</h3>
-          <p>₹250</p>
-        </div>
+        <a href="order.html">
+          <img src="Sindhi.jpg" alt="Sindhi biryani">
+          <div class="food-info">
+            <h3>Sindhi biryani</h3>
+            <p>₹250</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Hydrabad.jpg" alt="Hydrabadi Biryani">
-        <div class="food-info">
-          <h3>Hydrabadi Biryani</h3>
-          <p>₹200</p>
-        </div>
+        <a href="order.html">
+          <img src="Hydrabad.jpg" alt="Hydrabadi Biryani">
+          <div class="food-info">
+            <h3>Hydrabadi Biryani</h3>
+            <p>₹200</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Keema.jpg" alt="Keema  Biryani">
-        <div class="food-info">
-          <h3>Keema Biryani </h3>
-          <p>₹190</p>
-        </div>
+        <a href="order.html">
+          <img src="Keema.jpg" alt="Keema Biryani">
+          <div class="food-info">
+            <h3>Keema Biryani</h3>
+            <p>₹190</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Veg.jpg" alt="veg Biryani">
-        <div class="food-info">
-          <h3>Veg Biryani</h3>
-          <p>₹150</p>
-        </div>
+        <a href="order.html">
+          <img src="Veg.jpg" alt="veg Biryani">
+          <div class="food-info">
+            <h3>Veg Biryani</h3>
+            <p>₹150</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Mushroom_.jpg" alt="Mushroom Biryani">
-        <div class="food-info">
-          <h3>Mushroom Biryani</h3>
-          <p>₹210</p>
-        </div>
+        <a href="order.html">
+          <img src="Mushroom_.jpg" alt="Mushroom Biryani">
+          <div class="food-info">
+            <h3>Mushroom Biryani</h3>
+            <p>₹210</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Kozhikode.jpg" alt="Kozhikode Biryani">
-        <div class="food-info">
-          <h3>Kozhikode Biryani</h3>
-          <p>₹230</p>
-        </div>
+        <a href="order.html">
+          <img src="Kozhikode.jpg" alt="Kozhikode Biryani">
+          <div class="food-info">
+            <h3>Kozhikode Biryani</h3>
+            <p>₹230</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Kashmiri.jpg" alt="Kashmiri Biryani">
-        <div class="food-info">
-          <h3>Kashmiri Biryani    </h3>
-          <p>₹170</p>
-        </div>
+        <a href="order.html">
+          <img src="Kashmiri.jpg" alt="Kashmiri Biryani">
+          <div class="food-info">
+            <h3>Kashmiri Biryani</h3>
+            <p>₹170</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Fish.jpg" alt="Fish Biryani">
-        <div class="food-info">
-          <h3>Fish Biryani</h3>
-          <p>₹250</p>
-        </div>
+        <a href="order.html">
+          <img src="Fish.jpg" alt="Fish Biryani">
+          <div class="food-info">
+            <h3>Fish Biryani</h3>
+            <p>₹250</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Dum.jpg" alt="Chicken Dum Biryani">
-        <div class="food-info">
-          <h3>Chicken Dum Biryani</h3>
-          <p>₹280</p>
-        </div>
+        <a href="order.html">
+          <img src="Dum.jpg" alt="Chicken Dum Biryani">
+          <div class="food-info">
+            <h3>Chicken Dum Biryani</h3>
+            <p>₹280</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Beary.jpg" alt="Beary Biryani">
-        <div class="food-info">
-          <h3>Beary Biryani</h3>
-          <p>₹200</p>
-        </div>
+        <a href="order.html">
+          <img src="Beary.jpg" alt="Beary Biryani">
+          <div class="food-info">
+            <h3>Beary Biryani</h3>
+            <p>₹200</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Chettinad.jpg" alt="Chettinad Biryani">
-        <div class="food-info">
-          <h3>Chettinad Biryani </h3>
-          <p>₹210</p>
-        </div>
+        <a href="order.html">
+          <img src="Chettinad.jpg" alt="Chettinad Biryani">
+          <div class="food-info">
+            <h3>Chettinad Biryani</h3>
+            <p>₹210</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Bombay.jpg" alt="Bombay Biryani">
-        <div class="food-info">
-          <h3>Bombay Biryani</h3>
-          <p>₹240</p>
-        </div>
+        <a href="order.html">
+          <img src="Bombay.jpg" alt="Bombay Biryani">
+          <div class="food-info">
+            <h3>Bombay Biryani</h3>
+            <p>₹240</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Egg.jpg" alt="Egg Biryani">
-        <div class="food-info">
-          <h3>Egg Biryani</h3>
-          <p>₹130</p>
-        </div>
+        <a href="order.html">
+          <img src="Egg.jpg" alt="Egg Biryani">
+          <div class="food-info">
+            <h3>Egg Biryani</h3>
+            <p>₹130</p>
+          </div>
+        </a>
       </div>
     </div>
 
-    <a class="back-link" href="food.html">⬅ Back to Home</a>
+    <a class="back-link" href="index.html">⬅ Back to Home</a>
   </div>
 
   <script src="food.js"></script>
 </body>
-</html
+</html>
