--- a/Burger.html
+++ b/Burger.html
@@ -6,6 +6,17 @@
   <title>Burger Varieties - Jenito</title>
   <link rel="stylesheet" href="food.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    /* Card ko clickable dikhane ke liye aur link style hatane ke liye */
+    .food-card {
+      cursor: pointer;
+    }
+    .food-card a {
+      text-decoration: none;
+      color: inherit;
+      display: block; /* Isse pura card area clickable ho jata hai */
+    }
+  </style>
 </head>
 <body>
   <div id="stars-canvas"></div>
@@ -17,7 +28,7 @@
       <ul>
         <li><a href="index.html#popular">Popular Dishes</a></li>
         <li><a href="index.html#plans">Meal Plans</a></li>
-        <li><a href="#">Order Now</a></li>
+        <li><a href="order.html">Order Now</a></li>
         <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
@@ -26,124 +37,155 @@
   <div class="food-container">
     <h1>🍔 Burger Varieties</h1>
     <div class="food-grid">
+      
       <div class="food-card">
-        <img src="CHICKEN BUR.jpg" alt="Chicken Burger">
-        <div class="food-info">
-          <h3>Chicken Burger</h3>
-          <p>₹150</p>
-        </div>
+        <a href="order.html">
+          <img src="CHICKEN BUR.jpg" alt="Chicken Burger">
+          <div class="food-info">
+            <h3>Chicken Burger</h3>
+            <p>₹150</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Veggei.jpg" alt="Veg Burger">
-        <div class="food-info">
-          <h3>Veg Burger</h3>
-          <p>₹120</p>
-        </div>
+        <a href="order.html">
+          <img src="Veggei.jpg" alt="Veg Burger">
+          <div class="food-info">
+            <h3>Veg Burger</h3>
+            <p>₹120</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Grilled.jpg" alt="Grilled Turkey Burger">
-        <div class="food-info">
-          <h3>Grilled Turkey Burger</h3>
-          <p>₹180</p>
-        </div>
+        <a href="order.html">
+          <img src="Grilled.jpg" alt="Grilled Turkey Burger">
+          <div class="food-info">
+            <h3>Grilled Turkey Burger</h3>
+            <p>₹180</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Double.jpg" alt="Double Chicken Burger">
-        <div class="food-info">
-          <h3>Double Chicken Burger</h3>
-          <p>₹220</p>
-        </div>
+        <a href="order.html">
+          <img src="Double.jpg" alt="Double Chicken Burger">
+          <div class="food-info">
+            <h3>Double Chicken Burger</h3>
+            <p>₹220</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Crispy.jpg" alt="Crispy Chicken Burger">
-        <div class="food-info">
-          <h3>Crispy Chicken Burger</h3>
-          <p>₹190</p>
-        </div>
+        <a href="order.html">
+          <img src="Crispy.jpg" alt="Crispy Chicken Burger">
+          <div class="food-info">
+            <h3>Crispy Chicken Burger</h3>
+            <p>₹190</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="aloo.jpeg" alt="Aloo Tikki Burger">
-        <div class="food-info">
-          <h3>Aloo Tikki Burger</h3>
-          <p>₹100</p>
-        </div>
+        <a href="order.html">
+          <img src="aloo.jpeg" alt="Aloo Tikki Burger">
+          <div class="food-info">
+            <h3>Aloo Tikki Burger</h3>
+            <p>₹100</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Bbq_B.webp" alt="BBQ Burger">
-        <div class="food-info">
-          <h3>BBQ Burger</h3>
-          <p>₹210</p>
-        </div>
+        <a href="order.html">
+          <img src="Bbq_B.webp" alt="BBQ Burger">
+          <div class="food-info">
+            <h3>BBQ Burger</h3>
+            <p>₹210</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Mexican.jpg" alt="Mexican Burger">
-        <div class="food-info">
-          <h3>Mexican Burger</h3>
-          <p>₹230</p>
-        </div>
+        <a href="order.html">
+          <img src="Mexican.jpg" alt="Mexican Burger">
+          <div class="food-info">
+            <h3>Mexican Burger</h3>
+            <p>₹230</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Paneer.jpeg" alt="Paneer Burger">
-        <div class="food-info">
-          <h3>Paneer Burger</h3>
-          <p>₹170</p>
-        </div>
+        <a href="order.html">
+          <img src="Paneer.jpeg" alt="Paneer Burger">
+          <div class="food-info">
+            <h3>Paneer Burger</h3>
+            <p>₹170</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="FIshj.webp" alt="Fish Burger">
-        <div class="food-info">
-          <h3>Fish Burger</h3>
-          <p>₹250</p>
-        </div>
+        <a href="order.html">
+          <img src="FIshj.webp" alt="Fish Burger">
+          <div class="food-info">
+            <h3>Fish Burger</h3>
+            <p>₹250</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Bacon.jpg" alt="Bacon Cheese Burger">
-        <div class="food-info">
-          <h3>Bacon Cheese Burger</h3>
-          <p>₹280</p>
-        </div>
+        <a href="order.html">
+          <img src="Bacon.jpg" alt="Bacon Cheese Burger">
+          <div class="food-info">
+            <h3>Bacon Cheese Burger</h3>
+            <p>₹280</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Mushrorm.jpg" alt="Mushroom Burger">
-        <div class="food-info">
-          <h3>Mushroom Burger</h3>
-          <p>₹200</p>
-        </div>
+        <a href="order.html">
+          <img src="Mushrorm.jpg" alt="Mushroom Burger">
+          <div class="food-info">
+            <h3>Mushroom Burger</h3>
+            <p>₹200</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="spicy.webp" alt="Spicy Chicken Burger">
-        <div class="food-info">
-          <h3>Spicy Chicken Burger</h3>
-          <p>₹210</p>
-        </div>
+        <a href="order.html">
+          <img src="spicy.webp" alt="Spicy Chicken Burger">
+          <div class="food-info">
+            <h3>Spicy Chicken Burger</h3>
+            <p>₹210</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Double C.jpg" alt="Double Cheese Burger">
-        <div class="food-info">
-          <h3>Double Cheese Burger</h3>
-          <p>₹240</p>
-        </div>
+        <a href="order.html">
+          <img src="Double C.jpg" alt="Double Cheese Burger">
+          <div class="food-info">
+            <h3>Double Cheese Burger</h3>
+            <p>₹240</p>
+          </div>
+        </a>
       </div>
 
       <div class="food-card">
-        <img src="Giant.jpg" alt="Giant Burger">
-        <div class="food-info">
-          <h3>Gaint Burger</h3>
-          <p>₹130</p>
-        </div>
+        <a href="order.html">
+          <img src="Giant.jpg" alt="Giant Burger">
+          <div class="food-info">
+            <h3>Giant Burger</h3>
+            <p>₹130</p>
+          </div>
+        </a>
       </div>
     </div>
 
@@ -152,6 +194,4 @@
 
   <script src="food.js"></script>
 </body>
-
 </html>
-
