Fix HTML structure and formatting in Burger.html

--- a/Burger.html
+++ b/Burger.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="food.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    /* Card ko clickable dikhane ke liye aur link style hatane ke liye */
+    
     .food-card {
       cursor: pointer;
     }
     .food-card a {
       text-decoration: none;
       color: inherit;
-      display: block; /* Isse pura card area clickable ho jata hai */
+      display: block;
     }
   </style>
 </head>
@@ -195,3 +195,4 @@
   <script src="food.js"></script>
 </body>
 </html>
+
