Fix HTML formatting and structure in Dessert.html

--- a/Dessert.html
+++ b/Dessert.html
@@ -7,14 +7,13 @@
   <link rel="stylesheet" href="food.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    /* Card ko clickable banane aur link ka default style hatane ke liye */
     .food-card {
       cursor: pointer;
     }
     .food-card a {
       text-decoration: none;
       color: inherit;
-      display: block; /* Pura card area clickable banane ke liye */
+      display: block; 
     }
   </style>
 </head>
@@ -146,3 +145,4 @@
   <script src="food.js"></script>
 </body>
 </html>
+
