Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -82,26 +82,39 @@
   </section>
 
   <section class="plans" id="plans">
-    <h2>Our Meal Plans</h2>
-    <div class="plan-cards">
-      <div class="plan">
+  <h2>Our Meal Plans</h2>
+  <div class="plan-cards">
+    
+    <a href="starter.html" style="text-decoration: none; color: inherit;">
+      <div class="plan" style="cursor: pointer;">
         <h3>Starter</h3>
         <p>1 Main Dish + 1 Drink<br><b>₹149 / meal</b></p>
       </div>
-      <div class="plan">
+    </a>
+
+    <a href="family.html" style="text-decoration: none; color: inherit;">
+      <div class="plan" style="cursor: pointer;">
         <h3>Family</h3>
         <p>4 Dishes + Dessert<br><b>₹499 / meal</b></p>
       </div>
-      <div class="plan">
+    </a>
+
+    <a href="weekly.html" style="text-decoration: none; color: inherit;">
+      <div class="plan" style="cursor: pointer;">
         <h3>Weekly</h3>
         <p>7 Meals Plan<br>Healthy & Fresh<br><b>₹999 / week</b></p>
       </div>
-      <div class="plan">
+    </a>
+
+    <a href="premium.html" style="text-decoration: none; color: inherit;">
+      <div class="plan" style="cursor: pointer;">
         <h3>Premium</h3>
         <p>Unlimited Orders<br>Priority Delivery<br><b>₹1999 / month</b></p>
       </div>
-    </div>
-  </section>
+    </a>
+
+  </div>
+</section>
 
   <section class="app-section" id="Gettheapp">
     <div class="app-left">
