--- a/login.html
+++ b/login.html
@@ -10,20 +10,19 @@
   <div id="stars-canvas"></div>
   <div class="login-box">
     <h2>Welcome to Jenito</h2>
-    <p>Enter your name to explore our menu</p>
+    <p>Sign in to continue your order</p>
     <form id="loginForm">
-      <input type="text" id="username" placeholder="Your Name" required style="width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: 1px solid #ccc;">
-      <button type="submit" id="loginBtn" style="width: 100%; padding: 10px; background: #e50914; color: white; border: none; border-radius: 5px; cursor: pointer;">Continue as Guest</button>
+      <input type="text" id="username" placeholder="Your Name" required>
+      <button type="submit" id="loginBtn">Continue as Guest</button>
     </form>
-    <p><a href="index.html" style="color: #e50914; text-decoration: none;">⬅ Back to Home</a></p>
+    <p><a href="index.html">⬅ Back to Home</a></p>
   </div>
 
   <script>
     document.getElementById('loginForm').onsubmit = function(e) {
       e.preventDefault();
       localStorage.setItem("loggedIn", "true");
-      // Agar aapke pas order.html hai toh wahan bhej dega
-      window.location.href = "index.html"; 
+      window.location.href = "index.html";
     };
   </script>
   <script src="food.js"></script>
