Fix button href in order.html to point to index.html

--- a/order.html
+++ b/order.html
@@ -17,9 +17,9 @@
       <input type="text" placeholder="Society Name" required>
      <input type="text" placeholder="Pin Code" required>
 
-      <button type="Confirm" href="food.html">Confirm</button>
+      <button type="Confirm" href="index.html">Confirm</button>
     </form>
-    <p><a href="food.html">⬅ Back to Home</a></p>
+    <p><a href="index.html">⬅ Back to Home</a></p>
 
   </div>
    <script>
