--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <h1>Popular Dishes</h1>
     <div class="food-list">
       <div class="food-item">
-        <a href="pizza.html">
+        <a href="Pizza.html">
           <img src="Pizza.jpg" alt="Pizza">
           <p>Pizza</p>
         </a>
       </div>
       <div class="food-item">
-        <a href="burger.html">
+        <a href="Burger.html">
           <img src="Burger.jpg" alt="Burger">
           <p>Burger</p>
         </a>
@@ -61,19 +61,19 @@
         </a>
       </div>
       <div class="food-item">
-        <a href="biryani.html">
+        <a href="Biryani.html">
           <img src="Biryani.jpg" alt="Biryani">
           <p>Biryani</p>
         </a>
       </div>
       <div class="food-item">
-        <a href="noodles.html">
+        <a href="Noodles.html">
           <img src="Noodles.jpg" alt="Noodles">
           <p>Noodles</p>
         </a>
       </div>
       <div class="food-item">
-        <a href="dessert.html">
+        <a href="Dessert.html">
           <img src="Dessert.jpg" alt="Dessert">
           <p>Dessert</p>
         </a>
