--- a/burger.html
+++ b/burger.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Burger Varieties - Jenito</title>
+  <title>Pasta Varieties - Jenito</title>
   <link rel="stylesheet" href="food.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
+    /* Card ko clickable dikhane aur link style hatane ke liye */
     .food-card {
       cursor: pointer;
     }
     .food-card a {
       text-decoration: none;
       color: inherit;
-      display: block; 
+      display: block; /* Isse pura card area clickable ho jayega */
     }
   </style>
 </head>
@@ -34,34 +35,14 @@
   </header>
 
   <div class="food-container">
-    <h1>🍔 Burger Varieties</h1>
+    <h1>🍝 Pasta Varieties</h1>
     <div class="food-grid">
       
       <div class="food-card">
         <a href="order.html">
-          <img src="CHICKEN BUR.jpg" alt="Chicken Burger">
+          <img src="classic.jpg" alt="Classic Pasta">
           <div class="food-info">
-            <h3>Chicken Burger</h3>
-            <p>₹150</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="food-card">
-        <a href="order.html">
-          <img src="Veggei.jpg" alt="Veg Burger">
-          <div class="food-info">
-            <h3>Veg Burger</h3>
-            <p>₹120</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="food-card">
-        <a href="order.html">
-          <img src="Grilled.jpg" alt="Grilled Turkey Burger">
-          <div class="food-info">
-            <h3>Grilled Turkey Burger</h3>
+            <h3>Classic Pasta</h3>
             <p>₹180</p>
           </div>
         </a>
@@ -69,9 +50,9 @@
 
       <div class="food-card">
         <a href="order.html">
-          <img src="Double.jpg" alt="Double Chicken Burger">
+          <img src="White.jpg" alt="White Sauce Pasta">
           <div class="food-info">
-            <h3>Double Chicken Burger</h3>
+            <h3>White Sauce Pasta</h3>
             <p>₹220</p>
           </div>
         </a>
@@ -79,79 +60,9 @@
 
       <div class="food-card">
         <a href="order.html">
-          <img src="Crispy.jpg" alt="Crispy Chicken Burger">
+          <img src="Red Sauce.webp" alt="Red Sauce Pasta">
           <div class="food-info">
-            <h3>Crispy Chicken Burger</h3>
-            <p>₹190</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="food-card">
-        <a href="order.html">
-          <img src="aloo.jpeg" alt="Aloo Tikki Burger">
-          <div class="food-info">
-            <h3>Aloo Tikki Burger</h3>
-            <p>₹100</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="food-card">
-        <a href="order.html">
-          <img src="Bbq_B.webp" alt="BBQ Burger">
-          <div class="food-info">
-            <h3>BBQ Burger</h3>
-            <p>₹210</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="food-card">
-        <a href="order.html">
-          <img src="Mexican.jpg" alt="Mexican Burger">
-          <div class="food-info">
-            <h3>Mexican Burger</h3>
-            <p>₹230</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="food-card">
-        <a href="order.html">
-          <img src="Paneer.jpeg" alt="Paneer Burger">
-          <div class="food-info">
-            <h3>Paneer Burger</h3>
-            <p>₹170</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="food-card">
-        <a href="order.html">
-          <img src="FIshj.webp" alt="Fish Burger">
-          <div class="food-info">
-            <h3>Fish Burger</h3>
-            <p>₹250</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="food-card">
-        <a href="order.html">
-          <img src="Bacon.jpg" alt="Bacon Cheese Burger">
-          <div class="food-info">
-            <h3>Bacon Cheese Burger</h3>
-            <p>₹280</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="food-card">
-        <a href="order.html">
-          <img src="Mushrorm.jpg" alt="Mushroom Burger">
-          <div class="food-info">
-            <h3>Mushroom Burger</h3>
+            <h3>Red Sauce Pasta</h3>
             <p>₹200</p>
           </div>
         </a>
@@ -159,19 +70,29 @@
 
       <div class="food-card">
         <a href="order.html">
-          <img src="spicy.webp" alt="Spicy Chicken Burger">
+          <img src="penne.jpg" alt="Penne Arrabbiata">
           <div class="food-info">
-            <h3>Spicy Chicken Burger</h3>
-            <p>₹210</p>
+            <h3>Penne Arrabbiata</h3>
+            <p>₹190</p>
           </div>
         </a>
       </div>
 
       <div class="food-card">
         <a href="order.html">
-          <img src="Double C.jpg" alt="Double Cheese Burger">
+          <img src="Carbonara.jpg" alt="Pasta Carbonara">
           <div class="food-info">
-            <h3>Double Cheese Burger</h3>
+            <h3>Pasta Carbonara</h3>
+            <p>₹250</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="food-card">
+        <a href="order.html">
+          <img src="Alfredo.jpg" alt="Pasta Alfredo">
+          <div class="food-info">
+            <h3>Pasta Alfredo</h3>
             <p>₹240</p>
           </div>
         </a>
@@ -179,13 +100,64 @@
 
       <div class="food-card">
         <a href="order.html">
-          <img src="Giant.jpg" alt="Giant Burger">
+          <img src="Pesto.jpg" alt="Pasta Pesto">
           <div class="food-info">
-            <h3>Giant Burger</h3>
-            <p>₹130</p>
+            <h3>Pasta Pesto</h3>
+            <p>₹230</p>
           </div>
         </a>
       </div>
+
+      <div class="food-card">
+        <a href="order.html">
+          <img src="Primavera.jpg" alt="Pasta Primavera">
+          <div class="food-info">
+            <h3>Pasta Primavera</h3>
+            <p>₹210</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="food-card">
+        <a href="order.html">
+          <img src="bolognese.jpg" alt="Pasta Bolognese">
+          <div class="food-info">
+            <h3>Pasta Bolognese</h3>
+            <p>₹260</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="food-card">
+        <a href="order.html">
+          <img src="Marinara.jpg" alt="Pasta Marinara">
+          <div class="food-info">
+            <h3>Pasta Marinara</h3>
+            <p>₹200</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="food-card">
+        <a href="order.html">
+          <img src="aglio.jpg" alt="Pasta Aglio Olio">
+          <div class="food-info">
+            <h3>Pasta Aglio Olio</h3>
+            <p>₹190</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="food-card">
+        <a href="order.html">
+          <img src="Vodka.jpg" alt="Pasta Vodka">
+          <div class="food-info">
+            <h3>Pasta Vodka</h3>
+            <p>₹270</p>
+          </div>
+        </a>
+      </div>
+
     </div>
 
     <a class="back-link" href="index.html">⬅ Back to Home</a>
